// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Callout > should have a bold gray variant 1`] = `
<div
  class="bg-gray-100 text-gray-900 dark:bg-gray-700 dark:text-white relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a bold orange variant 1`] = `
<div
  class="bg-orange-200 text-black dark:bg-orange-200 dark:text-black relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a bold red variant 1`] = `
<div
  class="bg-red-600 text-white dark:bg-red-500 dark:text-black relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a subtle green variant 1`] = `
<div
  class="border border-green-600 bg-green-25/60 text-green-600 dark:border-green-300 dark:bg-green-900 dark:text-green-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a subtle teal variant 1`] = `
<div
  class="border border-teal-600 bg-teal-25/60 text-teal-600 dark:border-teal-300 dark:bg-teal-900 dark:text-teal-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a title, description, timestamp, and be size md 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a title, description, timestamp, and be size sm 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-3 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm leading-5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-sm leading-5 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline blue variant 1`] = `
<div
  class="bg-white border border-blue-600 text-blue-600 dark:bg-black dark:border-blue-300 dark:text-blue-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline indigo variant 1`] = `
<div
  class="bg-white border border-indigo-600 text-indigo-600 dark:bg-black dark:border-indigo-300 dark:text-indigo-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline purple variant 1`] = `
<div
  class="bg-white border border-purple-600 text-purple-600 dark:bg-black dark:border-purple-300 dark:text-purple-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have button in button slot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <div
        class="justify-center space-x-2 pt-4"
      >
        
        <button>
          This is a button
        </button>
        
      </div>
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have dismissable icon 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <div
      class="absolute top-2 right-2"
    >
      <button
        aria-label="Dismiss"
      >
        <svg
          aria-hidden="true"
          class="fill-gray-900 dark:fill-gray-300 w-4 h-4"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Callout > should have icon in leftSlot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      
      Left Icon Here
      
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have inset 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <div
      class="absolute top-2 right-2"
    >
      <button
        aria-label="Dismiss"
      >
        <svg
          aria-hidden="true"
          class="fill-gray-900 dark:fill-gray-300 w-4 h-4"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Callout > should match its default snapshot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <!--v-if-->
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should override description with slot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is an overridden description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render ai icon 1`] = `
<div
  class="bg-white border border-purple-600 text-purple-600 dark:bg-black dark:border-purple-300 dark:text-purple-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-purple-600 dark:fill-purple-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Pro v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M423.5 117.2C419 118.9 416 123.2 416 128C416 132.8 419 137.1 423.5 138.8L480 160L501.2 216.5C502.9 221 507.2 224 512 224C516.8 224 521.1 221 522.8 216.5L544 160L600.5 138.8C605 137.1 608 132.8 608 128C608 123.2 605 118.9 600.5 117.2L544 96L522.8 39.5C521.1 35 516.8 32 512 32C507.2 32 502.9 35 501.2 39.5L480 96L423.5 117.2zM199.9 272.5L224 220.4L248.1 272.5C252.9 282.9 261.2 291.2 271.6 296L323.7 320.1L271.6 344.2C261.2 349 252.9 357.3 248.1 367.7L224 419.8L199.9 367.7C195.1 357.3 186.8 349 176.4 344.2L124.3 320L176.5 295.9C186.9 291.1 195.2 282.8 200 272.4zM197.6 163.1L156.4 252.4L67.1 293.6L66.5 293.9C62.6 295.7 54.2 299.6 41.3 305.5C35.6 308.1 32 313.8 32 320C32 326.2 35.6 331.9 41.3 334.5C54.2 340.4 62.5 344.3 66.5 346.1L67.1 346.4L156.4 387.6L197.6 476.9L197.9 477.5C199.7 481.4 203.6 489.8 209.5 502.7C212.1 508.4 217.8 512 224 512C230.2 512 235.9 508.4 238.5 502.7C252.9 471.6 253.6 470 291.6 387.7L380.9 346.5L381.5 346.2C385.4 344.4 393.8 340.5 406.7 334.6C412.4 332 416 326.3 416 320.1C416 313.9 412.4 308.2 406.7 305.6C375.6 291.2 374 290.5 291.7 252.5L250.5 163.2L250.2 162.6C248.4 158.7 244.5 150.3 238.6 137.4C236 131.7 230.3 128.1 224.1 128.1C217.9 128.1 212.2 131.7 209.6 137.4C195.8 167.2 198.1 162.4 197.7 163.2zM448 480L391.5 501.2C387 502.9 384 507.2 384 512C384 516.8 387 521.1 391.5 522.8L448 544L469.2 600.5C470.9 605 475.2 608 480 608C484.8 608 489.1 605 490.8 600.5L512 544L568.5 522.8C573 521.1 576 516.8 576 512C576 507.2 573 502.9 568.5 501.2L512 480L490.8 423.5C489.1 419 484.8 416 480 416C475.2 416 470.9 419 469.2 423.5L448 480z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        AI Generated
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Content generated by AI
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render announcement icon 1`] = `
<div
  class="bg-blue-600 text-white dark:bg-blue-500 dark:text-black relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-white dark:fill-black"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Pro v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M530.2 82.3C538.6 86.3 544 94.7 544 104L544 536C544 545.3 538.6 553.7 530.2 557.7C521.8 561.7 511.9 560.4 504.7 554.5L448.5 508.2C407.3 474.2 356.8 453.7 304 449L304 528C304 554.5 282.5 576 256 576L208 576C181.5 576 160 554.5 160 528L160 444C104.8 429.8 64 379.6 64 320C64 249.3 121.3 192 192 192L281.4 192C342.4 191.8 401.4 170.6 448.5 131.8L504.7 85.5C511.9 79.6 521.8 78.4 530.2 82.3zM304 400L304 400.9C368 405.7 429.2 430.1 479 471.2L496 485.2L496 154.9L479 168.9C429.2 209.9 368 234.4 304 239.2L304 400zM256 448L208 448L208 528L256 528L256 448zM192 240C147.8 240 112 275.8 112 320C112 364.2 147.8 400 192 400L256 400L256 240L192 240z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Announcement
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Important update available
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render danger icon 1`] = `
<div
  class="border border-red-600 bg-red-25 text-red-600 dark:border-red-300 dark:bg-red-950 dark:text-red-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-red-600 dark:fill-red-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Free v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M320 112C434.9 112 528 205.1 528 320C528 434.9 434.9 528 320 528C205.1 528 112 434.9 112 320C112 205.1 205.1 112 320 112zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM231 231C221.6 240.4 221.6 255.6 231 264.9L286 319.9L231 374.9C221.6 384.3 221.6 399.5 231 408.8C240.4 418.1 255.6 418.2 264.9 408.8L319.9 353.8L374.9 408.8C384.3 418.2 399.5 418.2 408.8 408.8C418.1 399.4 418.2 384.2 408.8 374.9L353.8 319.9L408.8 264.9C418.2 255.5 418.2 240.3 408.8 231C399.4 221.7 384.2 221.6 374.9 231L319.9 286L264.9 231C255.5 221.6 240.3 221.6 231 231z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Danger
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Critical error occurred
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render help icon 1`] = `
<div
  class="bg-white border border-indigo-600 text-indigo-600 dark:bg-black dark:border-indigo-300 dark:text-indigo-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-indigo-600 dark:fill-indigo-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Free v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M528 320C528 205.1 434.9 112 320 112C205.1 112 112 205.1 112 320C112 434.9 205.1 528 320 528C434.9 528 528 434.9 528 320zM64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320zM320 240C302.3 240 288 254.3 288 272C288 285.3 277.3 296 264 296C250.7 296 240 285.3 240 272C240 227.8 275.8 192 320 192C364.2 192 400 227.8 400 272C400 319.2 364 339.2 344 346.5L344 350.3C344 363.6 333.3 374.3 320 374.3C306.7 374.3 296 363.6 296 350.3L296 342.2C296 321.7 310.8 307 326.1 302C332.5 299.9 339.3 296.5 344.3 291.7C348.6 287.5 352 281.7 352 272.1C352 254.4 337.7 240.1 320 240.1zM288 432C288 414.3 302.3 400 320 400C337.7 400 352 414.3 352 432C352 449.7 337.7 464 320 464C302.3 464 288 449.7 288 432z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Need Help?
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Contact support for assistance
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render icon with dismissable button 1`] = `
<div
  class="border border-orange-300 bg-orange-25/40 text-orange-600 dark:border-orange-300 dark:bg-orange-900 dark:text-orange-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-orange-600 dark:fill-orange-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Pro v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M320.5 64C335.2 64 348.7 72.1 355.7 85L571.7 485C578.4 497.4 578.1 512.4 570.9 524.5C563.7 536.6 550.6 544 536.5 544L104.5 544C90.4 544 77.4 536.6 70.2 524.5C63 512.4 62.7 497.4 69.4 485L285.4 85C292.4 72.1 305.9 64 320.6 64zM117.9 496L523.1 496L320.5 120.8L117.9 496zM320.5 456C302.8 456 288.5 441.7 288.5 424C288.5 406.3 302.8 392 320.5 392C338.2 392 352.5 406.3 352.5 424C352.5 441.7 338.2 456 320.5 456zM320.5 248C339.1 248 353.5 264.1 351.5 282.6L344.4 346.7C343 358.8 332.7 368 320.5 368C308.3 368 298 358.8 296.7 346.7L289.6 282.6C287.6 264.1 302 248 320.6 248z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Dismissable Warning
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This warning can be dismissed
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <div
      class="absolute top-2 right-2"
    >
      <button
        aria-label="Dismiss"
      >
        <svg
          aria-hidden="true"
          class="fill-orange-600 dark:fill-orange-300 w-4 h-4"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M183.1 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L275.2 320L137.9 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l137.3-137.4l137.4 137.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L365.8 320l137.3-137.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320.5 274.7z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Callout > should render info icon 1`] = `
<div
  class="border border-blue-600 bg-blue-25 text-blue-600 dark:border-blue-300 dark:bg-blue-950 dark:text-blue-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-blue-600 dark:fill-blue-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Pro v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M320 112C434.9 112 528 205.1 528 320C528 434.9 434.9 528 320 528C205.1 528 112 434.9 112 320C112 205.1 205.1 112 320 112zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM280 400C266.7 400 256 410.7 256 424C256 437.3 266.7 448 280 448L360 448C373.3 448 384 437.3 384 424C384 410.7 373.3 400 360 400L352 400L352 312C352 298.7 341.3 288 328 288L280 288C266.7 288 256 298.7 256 312C256 325.3 266.7 336 280 336L304 336L304 400L280 400zM320 256C337.7 256 352 241.7 352 224C352 206.3 337.7 192 320 192C302.3 192 288 206.3 288 224C288 241.7 302.3 256 320 256z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Information
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is an informational callout
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render success icon 1`] = `
<div
  class="border border-green-600 bg-green-25/60 text-green-600 dark:border-green-300 dark:bg-green-900 dark:text-green-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-green-600 dark:fill-green-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Free v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M320 576C178.6 576 64 461.4 64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576zM320 112C205.1 112 112 205.1 112 320C112 434.9 205.1 528 320 528C434.9 528 528 434.9 528 320C528 205.1 434.9 112 320 112zM390.7 233.9C398.5 223.2 413.5 220.8 424.2 228.6C434.9 236.4 437.3 251.4 429.5 262.1L307.4 430.1C303.3 435.8 296.9 439.4 289.9 439.9C282.9 440.4 276 437.9 271.1 433L215.2 377.1C205.8 367.7 205.8 352.5 215.2 343.2C224.6 333.9 239.8 333.8 249.1 343.2L285.1 379.2L390.7 234z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Success
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Operation completed successfully
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render tip icon 1`] = `
<div
  class="border border-teal-600 bg-teal-25/60 text-teal-600 dark:border-teal-300 dark:bg-teal-900 dark:text-teal-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-teal-600 dark:fill-teal-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Free v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M424.5 355.1C449 329.2 464 294.4 464 256C464 176.5 399.5 112 320 112C240.5 112 176 176.5 176 256C176 294.4 191 329.2 215.5 355.1C236.8 377.5 260.4 409.1 268.8 448L371.2 448C379.6 409 403.2 377.5 424.5 355.1zM459.3 388.1C435.7 413 416 443.4 416 477.7L416 496C416 540.2 380.2 576 336 576L304 576C259.8 576 224 540.2 224 496L224 477.7C224 443.4 204.3 413 180.7 388.1C148 353.7 128 307.2 128 256C128 150 214 64 320 64C426 64 512 150 512 256C512 307.2 492 353.7 459.3 388.1zM272 248C272 261.3 261.3 272 248 272C234.7 272 224 261.3 224 248C224 199.4 263.4 160 312 160C325.3 160 336 170.7 336 184C336 197.3 325.3 208 312 208C289.9 208 272 225.9 272 248z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Tip
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a helpful tip
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should render warning icon 1`] = `
<div
  class="border border-orange-300 bg-orange-25/40 text-orange-600 dark:border-orange-300 dark:bg-orange-900 dark:text-orange-300 relative p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      <svg
        class="fill-orange-600 dark:fill-orange-300"
        height="20"
        viewBox="0 0 640 640"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <!-- !Font Awesome Pro v7.3.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2026 Fonticons, Inc. -->
        
        <path
          d="M320.5 64C335.2 64 348.7 72.1 355.7 85L571.7 485C578.4 497.4 578.1 512.4 570.9 524.5C563.7 536.6 550.6 544 536.5 544L104.5 544C90.4 544 77.4 536.6 70.2 524.5C63 512.4 62.7 497.4 69.4 485L285.4 85C292.4 72.1 305.9 64 320.6 64zM117.9 496L523.1 496L320.5 120.8L117.9 496zM320.5 456C302.8 456 288.5 441.7 288.5 424C288.5 406.3 302.8 392 320.5 392C338.2 392 352.5 406.3 352.5 424C352.5 441.7 338.2 456 320.5 456zM320.5 248C339.1 248 353.5 264.1 351.5 282.6L344.4 346.7C343 358.8 332.7 368 320.5 368C308.3 368 298 358.8 296.7 346.7L289.6 282.6C287.6 264.1 302 248 320.6 248z"
        />
      </svg>
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        Warning
      </span>
      <div
        class="opacity-90 text-md leading-6"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          Please be cautious
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;
